--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,53 +5,53 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/test_goto_login"
+            style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/DemoBtnTestEntrance"
             android:text="test_goto_login" />
 
         <Button
             android:id="@+id/test_goto_tab"
+            style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/DemoBtnTestEntrance"
             android:text="test_goto_tab" />
 
         <Button
             android:id="@+id/test_goto_fab"
+            style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/DemoBtnTestEntrance"
             android:text="test_goto_fab" />
 
         <Button
             android:id="@+id/test_goto_collapse_tool_bar"
+            style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/DemoBtnTestEntrance"
             android:text="test_goto_collapse_app_bar" />
 
         <Button
             android:id="@+id/test_swipe_dismiss"
+            style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/DemoBtnTestEntrance"
             android:text="test_swipe_dismiss" />
 
-        <!--<Button
-            android:id="@+id/"
+        <Button
+            android:id="@+id/test_temp_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/DemoBtnTestEntrance"
-            android:text="" />
+            android:text="temp_activity" />
 
-        <Button
+        <!--<Button
             android:id="@+id/"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
