--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="gray">#CCCCCC</color>
     <color name="green">#44D080</color>
     <color name="white_light">#F7F7F7</color>
+
+    <color name="btninvalid">#66ccf5</color>
 </resources>
