--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -72,14 +72,14 @@
             style="@style/DemoBtnTestEntrance"
             android:text="navigation_view" />
 
-        <!--<Button
-            android:id="@+id/"
+        <Button
+            android:id="@+id/test_web_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/DemoBtnTestEntrance"
-            android:text="" />
+            android:text="web_video" />
 
-        <Button
+        <!--<Button
             android:id="@+id/"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
