--- a/app/src/main/res/layout/activity_test_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_test_constraint_layout.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="@id/temp_constraint_layout"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="@+id/temp_constraint_layout"
         app:layout_constraintRight_toRightOf="@+id/temp_constraint_layout"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintVertical_bias="0.6"
-        app:layout_constraintTop_toTopOf="@id/temp_constraint_layout" />
+        app:layout_constraintTop_toTopOf="@id/temp_constraint_layout"
+        app:layout_constraintVertical_bias="0.6" />
 
     <Button
         android:id="@+id/temp_btn"
@@ -108,8 +108,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:visibility="visible"
         android:text="text6"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/temp_guide_vertical_0.4" />
 
@@ -117,19 +117,32 @@
         android:id="@+id/temp_text7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:background="@color/colorPrimary"
+        android:text="text7"
+        android:textColor="@color/white_light"
+        android:visibility="visible"
+        app:layout_constraintBaseline_toBaselineOf="@+id/temp_text6"
+        app:layout_constraintLeft_toRightOf="@+id/temp_text6" />
+
+    <TextView
+        android:id="@+id/temp_text8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:background="@color/colorPrimaryDark"
+        android:text="text8"
         android:textColor="@color/white_light"
         app:layout_constraintBaseline_toBaselineOf="@+id/temp_text6"
-        android:text="text7"
-        app:layout_goneMarginLeft="100dp"
-        app:layout_constraintLeft_toRightOf="@+id/temp_text6" />
+        app:layout_constraintLeft_toRightOf="@+id/temp_text7"
+        app:layout_goneMarginLeft="100dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/temp_img"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintLeft_toRightOf="@id/temp_img"/>
+        app:layout_constraintLeft_toRightOf="@id/temp_img"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/temp_img" />
 
 </android.support.constraint.ConstraintLayout>
