--- a/app/src/main/res/layout/test_constraint_layout_v1_1.xml
+++ b/app/src/main/res/layout/test_constraint_layout_v1_1.xml
@@ -59,7 +59,7 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/temp_text4"
         app:layout_constraintLeft_toRightOf="@+id/temp_text4"
         app:layout_constraintRight_toLeftOf="@+id/temp_text6"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintWidth_percent="7" />
 
     <TextView
         android:id="@+id/temp_text6"
@@ -75,12 +75,12 @@
         android:id="@+id/temp_text7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
         android:singleLine="true"
         android:text="text7 longlonglonglong"
         app:layout_constrainedWidth="true"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/temp_text4"
         app:layout_constraintWidth_max="50dp" />
 
@@ -99,8 +99,8 @@
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:barrierDirection="right"
         app:barrierAllowsGoneWidgets="true"
+        app:barrierDirection="right"
         app:constraint_referenced_ids="temp_text7, temp_text8" />
 
     <TextView
@@ -116,16 +116,44 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/green"
-        app:layout_constraintWidth_percent="0.5"
-        app:layout_goneMarginTop="30dp"
-        app:layout_constraintWidth_default="percent"
         android:text="text10"
-        app:layout_constraintTop_toBottomOf="@+id/temp_text8" />
+        app:layout_constraintTop_toBottomOf="@+id/temp_text8"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="5"
+        app:layout_goneMarginTop="30dp" />
 
     <android.support.constraint.Group
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
         app:constraint_referenced_ids="temp_text7, temp_text8" />
+
+
+    <!-- Placeholder -->
+    <include layout="@layout/layout_constraint_template" />
+
+    <TextView
+        android:id="@+id/save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="save" />
+
+    <TextView
+        android:id="@+id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="edit" />
+
+    <TextView
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cancel" />
+
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/delete" />
 
 </android.support.constraint.ConstraintLayout>
