--- a/app/src/main/res/layout/activity_navigation_view.xml
+++ b/app/src/main/res/layout/activity_navigation_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_navigation_view_drawer_layout"
     android:layout_width="match_parent"
@@ -19,7 +19,7 @@
 
     </FrameLayout>
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/activity_navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -29,4 +29,4 @@
         app:itemIconTint="@color/btninvalid"
         app:menu="@menu/menu_navigation" />
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
