--- a/app/src/main/res/layout/layout_constraint_template.xml
+++ b/app/src/main/res/layout/layout_constraint_template.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp"
-    tools:parentTag="android.support.constraint.ConstraintLayout">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
-    <android.support.constraint.Placeholder
+    <androidx.constraintlayout.widget.Placeholder
 
         android:id="@+id/template_main_image"
         android:layout_width="0dp"
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <android.support.constraint.Placeholder
+    <androidx.constraintlayout.widget.Placeholder
 
         android:id="@+id/template_save"
         android:layout_width="48dp"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toStartOf="@+id/template_delete"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.constraint.Placeholder
+    <androidx.constraintlayout.widget.Placeholder
 
         android:id="@+id/template_delete"
         android:layout_width="48dp"
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toEndOf="@+id/template_save"
         app:layout_constraintTop_toTopOf="@+id/template_save" />
 
-    <android.support.constraint.Placeholder
+    <androidx.constraintlayout.widget.Placeholder
 
         android:id="@+id/template_cancel"
         android:layout_width="48dp"
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toStartOf="@+id/template_edit"
         app:layout_constraintStart_toEndOf="@+id/template_delete" />
 
-    <android.support.constraint.Placeholder
+    <androidx.constraintlayout.widget.Placeholder
 
         android:id="@+id/template_edit"
         android:layout_width="48dp"
