--- a/app/src/main/res/layout/test_constraint_layout_v1_1.xml
+++ b/app/src/main/res/layout/test_constraint_layout_v1_1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -95,7 +95,7 @@
         app:layout_constraintCircleAngle="180"
         app:layout_constraintCircleRadius="40dp" />
 
-    <android.support.constraint.Barrier
+    <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -122,7 +122,7 @@
         app:layout_constraintWidth_percent="5"
         app:layout_goneMarginTop="30dp" />
 
-    <android.support.constraint.Group
+    <androidx.constraintlayout.widget.Group
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
@@ -156,4 +156,4 @@
         android:layout_height="wrap_content"
         android:src="@drawable/delete" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
