--- a/app/src/main/res/layout/activity_test_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_test_constraint_layout.xml
@@ -57,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="text2"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/temp_text1"
         app:layout_constraintRight_toLeftOf="@+id/temp_text3"
         tools:layout_editor_absoluteY="0dp" />
@@ -66,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="text3"
         app:layout_constraintLeft_toRightOf="@+id/temp_text2"
         app:layout_constraintRight_toRightOf="parent" />
