--- a/app/src/main/res/layout/activity_test_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_test_constraint_layout.xml
@@ -99,7 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/temp_text4" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/temp_guide_vertical_0.4"
+        android:id="@+id/temp_guide_vertical_guide"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -113,7 +113,7 @@
         android:text="text6"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/temp_guide_vertical_0.4" />
+        app:layout_constraintLeft_toLeftOf="@+id/temp_guide_vertical_guide" />
 
     <TextView
         android:id="@+id/temp_text7"
