--- a/app/src/main/res/layout/act_hardware_test.xml
+++ b/app/src/main/res/layout/act_hardware_test.xml
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/surface" />
 
-    <com.barran.example.hardware.HAImageView
+    <com.barran.sample.hardware.HAImageView
         android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
