--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,13 @@
             android:layout_height="wrap_content"
             android:text="test_other" />
 
+        <Button
+            android:id="@+id/test_photo_picker"
+            style="@style/DemoBtnTestEntrance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test_photo_picker" />
+
     </LinearLayout>
 
 </ScrollView>
