add compose gesture test

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,13 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/test_compose"
+            style="@style/DemoBtnTestEntrance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test_compose" />
+
+        <Button
             android:id="@+id/test_goto_tab"
             style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
