--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,13 @@
             android:layout_height="wrap_content"
             android:text="test_photo_picker" />
 
+        <Button
+            android:id="@+id/test_native"
+            style="@style/DemoBtnTestEntrance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test_native" />
+
     </LinearLayout>
 
 </ScrollView>
