demo:扫描drawable使用并替换成自定义属性，下一步可将资源删除并通过网络下载使用

--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical">
@@ -9,11 +10,17 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_head" />
+
         <Button
             android:id="@+id/test_get_install_package_list"
             style="@style/DemoBtnTestEntrance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:imgSrc="aaaaaa"
             android:text="get_install_package_list" />
 
         <Button
