compat android 14 & test broadcast
Signed-off-by: tanwei <tanwei@bigo.sg>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,13 @@
             android:layout_height="wrap_content"
             android:text="test_native" />
 
+        <Button
+            android:id="@+id/test_compat"
+            style="@style/DemoBtnTestEntrance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test_compat" />
+
     </LinearLayout>
 
 </ScrollView>
