use StaggeredGridLayout for entries
Signed-off-by: tanwei <tanwei@bigo.sg>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,133 +1,4 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/entry_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/test_compose"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_compose" />
-
-        <Button
-            android:id="@+id/test_goto_tab"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_goto_tab" />
-
-        <Button
-            android:id="@+id/test_goto_fab"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_goto_fab" />
-
-        <Button
-            android:id="@+id/test_goto_collapse_tool_bar"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_goto_collapse_app_bar" />
-
-        <Button
-            android:id="@+id/test_swipe_dismiss"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_swipe_dismiss" />
-
-        <Button
-            android:id="@+id/test_swipe_delete"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_swipe_delete" />
-
-        <Button
-            android:id="@+id/test_constraint_activity"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="constraint_activity" />
-
-        <Button
-            android:id="@+id/test_path"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_path" />
-
-        <Button
-            android:id="@+id/test_navigation_view"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="navigation_view" />
-
-        <Button
-            android:id="@+id/test_web_video"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="web_video" />
-
-        <Button
-            android:id="@+id/test_offset"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_offset" />
-
-        <Button
-            android:id="@+id/test_constraint_1_1"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_constraint_1_1" />
-
-        <Button
-            android:id="@+id/test_hardware_accelerated"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_hardware_accelerated" />
-
-        <Button
-            android:id="@+id/test_other"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_other" />
-
-        <Button
-            android:id="@+id/test_photo_picker"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_photo_picker" />
-
-        <Button
-            android:id="@+id/test_native"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_native" />
-
-        <Button
-            android:id="@+id/test_compat"
-            style="@style/DemoBtnTestEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test_compat" />
-
-    </LinearLayout>
-
-</ScrollView>
+    android:layout_height="match_parent"/>
