--- a/app/src/main/res/xml/motion_carousel_scene.xml
+++ b/app/src/main/res/xml/motion_carousel_scene.xml
@@ -28,59 +28,97 @@
     <ConstraintSet android:id="@+id/previous">
 
         <Constraint
-            android:id="@+id/image_3"
+            android:id="@+id/image_5"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:rotationY="30"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:translationZ="4dp"
+            android:translationZ="0dp"
+            android:alpha="0"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@id/glm2"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintDimensionRatio="2:1">
             <CustomAttribute
                 app:attributeName="Saturation"
-                app:customFloatValue="0.0" />
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/image_2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:rotationY="-30"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:translationZ="6dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="@id/glm1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <CustomAttribute
-                app:attributeName="Saturation"
-                app:customFloatValue="0.0" />
+                app:customFloatValue="0.0"
+                />
         </Constraint>
 
         <Constraint
             android:id="@+id/image_1"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleX="1.2"
-            android:scaleY="1.2"
-            android:translationZ="10dp"
+            android:rotationY="30"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:alpha="1"
+            android:translationZ="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
-            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/glm2"
             app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
                 app:attributeName="Saturation"
-                app:customFloatValue="1.0" />
+                app:customFloatValue="0.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:rotationY="-30"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:translationZ="6dp"
+            android:alpha="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1"
+            app:layout_constraintLeft_toLeftOf="@id/glm1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="0.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleX="1.2"
+            android:scaleY="1.2"
+            android:alpha="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1"
+            android:translationZ="10dp"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="1.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:translationZ="0dp"
+            android:alpha="0"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1">
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="0.0"
+                />
         </Constraint>
     </ConstraintSet>
 
@@ -92,56 +130,94 @@
             android:id="@+id/image_1"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:rotationY="30"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:translationZ="4dp"
+            android:translationZ="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@id/glm2"
-            app:layout_constraintTop_toTopOf="parent">
+            android:alpha="0"
+            app:layout_constraintDimensionRatio="2:1">
             <CustomAttribute
                 app:attributeName="Saturation"
-                app:customFloatValue="0.0" />
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/image_3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:rotationY="-30"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:translationZ="6dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="@id/glm1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <CustomAttribute
-                app:attributeName="Saturation"
-                app:customFloatValue="0.0" />
+                app:customFloatValue="0.0"
+                />
         </Constraint>
 
         <Constraint
             android:id="@+id/image_2"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleX="1.2"
-            android:scaleY="1.2"
-            android:translationZ="10dp"
+            android:rotationY="30"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:translationZ="4dp"
+            android:alpha="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
-            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/glm2"
             app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
                 app:attributeName="Saturation"
-                app:customFloatValue="1.0" />
+                app:customFloatValue="0.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:rotationY="-30"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:translationZ="6dp"
+            android:alpha="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1"
+            app:layout_constraintLeft_toLeftOf="@id/glm1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="0.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleX="1.2"
+            android:scaleY="1.2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1"
+            android:translationZ="10dp"
+            android:alpha="1"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="1.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_5"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:translationZ="0dp"
+            android:alpha="0"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1">
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="0.0"
+                />
         </Constraint>
     </ConstraintSet>
 
@@ -153,56 +229,94 @@
             android:id="@+id/image_2"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:rotationY="30"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:translationZ="4dp"
+            android:translationZ="0dp"
+            android:alpha="0"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@id/glm2"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintDimensionRatio="2:1">
             <CustomAttribute
                 app:attributeName="Saturation"
-                app:customFloatValue="0.0" />
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/image_1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:rotationY="-30"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:translationZ="6dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="@id/glm1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <CustomAttribute
-                app:attributeName="Saturation"
-                app:customFloatValue="0.0" />
+                app:customFloatValue="0.0"
+                />
         </Constraint>
 
         <Constraint
             android:id="@+id/image_3"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleX="1.2"
-            android:scaleY="1.2"
-            android:translationZ="10dp"
+            android:rotationY="30"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:translationZ="4dp"
+            android:alpha="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="2:1"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
-            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/glm2"
             app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
                 app:attributeName="Saturation"
-                app:customFloatValue="1.0" />
+                app:customFloatValue="0.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_5"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:rotationY="-30"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:alpha="1"
+            android:translationZ="6dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1"
+            app:layout_constraintLeft_toLeftOf="@id/glm1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="0.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleX="1.2"
+            android:scaleY="1.2"
+            android:alpha="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1"
+            android:translationZ="10dp"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="1.0"
+                />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/image_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:translationZ="0dp"
+            android:alpha="0"
+            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+            app:layout_constraintRight_toRightOf="@id/glRight"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="2:1">
+            <CustomAttribute
+                app:attributeName="Saturation"
+                app:customFloatValue="0.0"
+                />
         </Constraint>
     </ConstraintSet>
 
